--- a/DAILYPiGu_JS_ME.Rmd
+++ b/DAILYPiGu_JS_ME.Rmd
@@ -173,7 +173,183 @@ nyear <- length(unique(year_i))
 
 ```
 
-```{r model prob}
+
+```{r model null}
+
+model_MEJS <- function () {
+  
+  # Priors and constraints
+  for (i in 1:M) { 
+    for (t in 1:(n.occasions-1)){ 
+      logit(phiA[i,t]) <- mu.phi[1] #+ b.egg.y[year_i[i]] 
+      logit(phiB[i,t]) <- mu.phi[2] #+ b.chick.y[year_i[i]] 
+      gamma[i,t] <- mean.gamma    # Prior for entry probabilities at occasion t
+      pA[i,t] <- mean.p[1]     # egg burrow detection
+      pB[i,t] <- mean.p[2]     # chick burrow detection, only need 1:14
+      psiAB[i,t] <- mean.psiAB  #egg to chick
+    } #t
+  } #i
+  
+  b ~ dunif(0,1)            # prior for assignment probability
+  mean.psiAB ~ dunif(0,1)   # transition from egg to chick
+  mean.gamma ~ dunif(0,1)
+  pi ~ ddirch(alpha[1:3])   #dirichlet prior for multinomial
+  alpha[1] <- 1/3
+  alpha[2] <- 1/3
+  alpha[3] <- 1/3
+  
+  for (u in 1:2){
+    mu.phi[u] ~ dnorm(0, 0.001)    # mean state-spec. survival
+    mean.p[u] ~ dunif(0.2, 1)      # mean state-spec. detection
+  }
+  
+  #params and priors for a fixed year effect on phi
+  # for (y in 2:nyear) {
+  #   b.chick.y[y] ~ dnorm(0, 0.001)
+  #   b.egg.y[y] ~ dnorm(0, 0.001)
+  # }
+  # b.chick.y[1] <- 0
+  # b.egg.y[1] <- 0
+  
+  phiA.int <- 1/(1+exp(-mu.phi[1]))  #plogis() back to probability scale
+  phiB.int <- 1/(1+exp(-mu.phi[2]))
+  
+  # Likelihood 
+  for (i in 1:M){
+    # Define latent state at first occasion
+    z[i,1] ~ dcat(pi[1:3])      #all M individuals have probability of being in 1 of 3 states at first occ
+    # y[i,1] ~ dcat(po[z[i,1], i, 1, 1:3])  #covered below
+    
+    for (t in 2:n.occasions){
+      # State process: draw S(t) given S(t-1); daily
+      z[i,t] ~ dcat(ps[z[i,t-1], i, t-1, 1:4])
+    } #t
+    
+    # Observation process: draw O(t) given S(t); n_visit approach via Nathan
+    for (k in 1:visits_i[i]) {  
+      y[i,survey_day[i,k]] ~ dcat(po[z[i,survey_day[i,k]], i, k, 1:3]) 
+    } #k
+  } #i
+  
+  # Define transition and observation matrices
+  for (i in 1:M){
+    for (t in 1:(n.occasions-1)) {
+      # Define probabilities of state S(t+1) given S(t)   
+      ps[1,i,t,1] <- 1-gamma[i,t]              #probability of not entering
+      ps[1,i,t,2] <- gamma[i,t]                #probability of entering as egg
+      ps[1,i,t,3] <- 0                         #can't enter as a chick after day 1
+      ps[1,i,t,4] <- 0                         #probability of entering as terminated
+      ps[2,i,t,1] <- 0                         #probability egg goes to 'not entered'
+      ps[2,i,t,2] <- (1-psiAB[i,t])*phiA[i,t]  #probability of surviving egg state and not transitioning
+      ps[2,i,t,3] <- phiA[i,t]*psiAB[i,t]          #probability of surviving egg state and hatching
+      ps[2,i,t,4] <- 1-phiA[i,t]                   #probability of a failed egg
+      ps[3,i,t,1] <- 0                             #probability chick goes to 'not entered'
+      ps[3,i,t,2] <- 0                             #probability chick goes to egg
+      ps[3,i,t,3] <- phiB[i,t]
+      ps[3,i,t,4] <- 1-phiB[i,t]            #probability of failed chick
+      ps[4,i,t,1] <- 0                      #probability terminated goes to 'not entered'
+      ps[4,i,t,2] <- 0                      #probability terminated goes to egg (maybe happens)
+      ps[4,i,t,3] <- 0                      #probability terminated goes to chick
+      ps[4,i,t,4] <- 1                      #probability terminated goes to terminated
+    } #t
+    
+    for (t in 1:visits_i[i]) { #might need effort 
+      # Define probabilities of O(t) given S(t)
+      po[1,i,t,1] <- 0                        #'not entered' burrow is detected with a burrow visit
+      po[1,i,t,2] <- 0                        #'not entered' burrow is detected with a prey visit
+      po[1,i,t,3] <- 1                        #'not entered' burrow is not detected
+      po[2,i,t,1] <- pA[i,t]                  #egg burrow is detected with a burrow visit
+      po[2,i,t,2] <- 0                        #egg burrow is detected with a prey visit
+      po[2,i,t,3] <- 1-pA[i,t]                #egg burrow is not detected
+      po[3,i,t,1] <- b * pB[i,t]              #chick burrow is detected with a burrow visit 
+      po[3,i,t,2] <- (1 - b) * pB[i,t]        #chick burrow is detected with a prey visit
+      po[3,i,t,3] <- 1 - pB[i,t]              #chick burrow is not detected
+      po[4,i,t,1] <- 0                        #terminated burrow is detected with a burrow visit
+      po[4,i,t,2] <- 0                        #terminated burrow is detected with a prey visit
+      po[4,i,t,3] <- 1                        #terminated burrow is not detected
+    } #t
+  }#M
+  
+  #mean over study period
+  for (i in 1:M) {
+    days.chick[i] <- sum(z[i,] == 3)
+    days.egg[i] <- sum(z[i,] == 2)
+    fledged_high[i] <- step(days.chick[i]-32) #if step() greater than zero, 1
+    fledged_low[i] <- step(days.chick[i]-45) #if step() greater than zero, 1
+    everActive[i] <- max(z[i,]>1) #number of active ever
+  } #i
+  
+  #seasonal values
+  #for (i in 1:M) {
+  for (t in 2:n.occasions) {
+    chick[t] <- sum(z[1:M,t] == 3)
+    egg[t] <- sum(z[1:M,t] == 2)
+  } #t
+  #} #i
+  
+  #means
+  n.fledged.low <- sum(fledged_low[1:M])
+  n.fledged.high <- sum(fledged_high[1:M])
+  n.active.burrow <- sum(everActive[1:M])
+  nest.succ.low <- n.fledged.low/n.active.burrow
+  nest.succ.high <- n.fledged.high/n.active.burrow
+  mean.days.chick <- mean(days.chick)
+  mean.days.egg <- mean(days.egg)
+  Nstar <- sum(everActive[1:M])
+  phiA.tot <- phiA.int^30
+  phiB.tot <- phiB.int^33
+} #mod
+
+write.model(model_MEJS, "model_MEJS.txt")
+model.file = paste(getwd(),"model_MEJS.txt", sep="/")
+
+```
+
+
+```{r null sim run}
+   
+# Bundle data; from sim - check below
+jags.data <- list(y = CH, n.occasions = n.occasions, 
+                  z = z.st,
+                  survey_day = survey_day, 
+                  visits_i = visits_i, 
+                  M = M)
+
+inits <- function(){list(#mean.phi = runif(2, 0, 1), 
+  #mean.p = runif(2, 0.3, 1),
+  z = z.init)}  
+
+# Parameters monitored
+parameters <- c("mean.p", "b", 
+                'mu.phi.egg', 'mu.phi.ch', 'phiA.int', 'phiB.int', 'phiA.tot', 'phiB.tot',
+                'n.active.burrow', 'n.fledged.low', 'n.fledged.high', 
+                'mean.days.chick', 'mean.days.egg', 'mean.gamma',
+                "mean.psiAB",
+                'nest.succ.low', 'nest.succ.high', 
+                # "N.active", 'Nstar',
+                "mu.phi")
+
+# MCMC settings
+# ni <- 15000; nt <- 1; nb <- 8000; nc <- 4
+ni <- 3; nt <- 1; nb <- 1; nc <- 2
+
+out_sim <- jagsUI::jags(jags.data, inits, parameters, model.file = model.file,
+                n.chains = nc, n.thin = nt, n.iter = ni, n.burnin = nb, parallel = T)
+
+# out1 <- readRDS('out2aa.rds') #p = 0.8, phi = 0.96/0.98, psi = 0.025
+# out2 <- readRDS('out2a.rds') #p = 0.85, phi = 0.99/0.97, psi = 0.025
+# out3 <- readRDS('out2e.rds') #p = 0.7, phi = 0.97, psi = 0.02
+
+# out_best <- readRDS('out2f.rds')
+
+# out4 <- readRDS('out7c.rds') #p = 0.7, phi = 0.94, psi = 0.025
+# out5 <- readRDS('out7d.rds') #p = 0.8, phi = 0.95, psi = 0.023
+
+
+```
+
+
+```{r model prob dont like this}
 
 model_MEJS <- function () {
   
@@ -307,13 +483,12 @@ model.file = paste(getwd(),"model_MEJS.txt", sep="/")
 
 ```
 
-
-```{r run annual}
+```{r data run}
 
 # Bundle data
 jags.data <- list(y = y, n.occasions = max(survey_days, na.rm = T), nyear = length(unique(year_i)),
                   #z = z.st, 
-                  survey_day = survey_days, #from setup, survey_days
+                  survey_day = survey_days, #from setup, survey_days 
                   visits_i = visits_i, year_i = year_i,
                   M = dim(ch)[1])
 
