--- a/PiGu_JS_Sim.Rmd
+++ b/PiGu_JS_Sim.Rmd
@@ -13,7 +13,7 @@ library(dplyr)
 ```
 
 
-```{r model}
+```{r null mod}
 
 model_MEJS <- function () {
   
@@ -39,7 +39,7 @@ model_MEJS <- function () {
   
   for (u in 1:2){
     mu.phi[u] ~ dnorm(0, 0.001)    # mean state-spec. survival
-    mean.p[u] ~ dunif(0, 1)      # mean state-spec. detection
+    mean.p[u] ~ dunif(0.2, 1)      # mean state-spec. detection
   }
   
   #params and priors for a fixed year effect on phi
@@ -135,6 +135,8 @@ model_MEJS <- function () {
   mean.days.chick <- mean(days.chick)
   mean.days.egg <- mean(days.egg)
   Nstar <- sum(everActive[1:M])
+  phiA.tot <- phiA.int^30
+  phiB.tot <- phiB.int^33
 } #mod
 
 write.model(model_MEJS, "model_MEJS.txt")
@@ -142,141 +144,8 @@ model.file = paste(getwd(),"model_MEJS.txt", sep="/")
 
 ```
 
-```{r model prob}
 
-model_MEJS <- function () {
-  
-  # Priors and constraints
-  for (i in 1:M) { 
-    for (t in 1:(n.occasions-1)){ 
-      logit(phiA[i,t]) <- mu.phiA[i,t]
-      logit(phiB[i,t]) <- mu.phiB[i,t] 
-      mu.phiA[i,t] <- b0.egg #+ b.egg.y[year_i[i]] 
-      mu.phiB[i,t] <- b0.ch #+ b.chick.y[year_i[i]] 
-      gamma[i,t] <- mean.gamma    # Prior for entry probabilities at occasion t
-      pA[i,t] <- mean.p[1]     # egg burrow detection
-      pB[i,t] <- mean.p[2]     # chick burrow detection, only need 1:14
-      psiAB[i,t] <- mean.psiAB  #egg to chick
-    } #t
-  } #i
-  
-  #b0.egg ~ dnorm(0, 0.1) #logit scale, same as implemented above
-  #b0.ch ~ dnorm(0, 0.1) #logit scale
-  mu.phi.egg ~ dbeta(1,1) #probability scale, could also be dunif(0,1)
-  b0.egg <- logit(mu.phi.egg) #back transform probability-scale prior to logit scale
-  mu.phi.ch ~ dbeta(1,1) #probability scale, could also be dunif(0,1)
-  b0.ch <- logit(mu.phi.ch)  #back transform probability-scale prior to logit scale
-  
-  b ~ dunif(0,1)            # prior for assignment probability
-  mean.psiAB ~ dunif(0,1)   # transition from egg to chick
-  mean.gamma ~ dunif(0,1)
-  pi ~ ddirch(alpha[1:3])   #dirichlet prior for multinomial
-  alpha[1] <- 1/3
-  alpha[2] <- 1/3
-  alpha[3] <- 1/3
-  
-  for (u in 1:2){
-    mean.p[u] ~ dunif(0, 1)      # mean state-spec. detection
-  }
-  
-  #params and priors for a fixed year effect on phi
-  # for (y in 2:nyear) {
-  #   b.chick.y[y] ~ dnorm(0, 0.001)
-  #   b.egg.y[y] ~ dnorm(0, 0.001)
-  # }
-  # b.chick.y[1] <- 0
-  # b.egg.y[1] <- 0
-  
-  # Likelihood 
-  for (i in 1:M){
-    # Define latent state at first occasion
-    z[i,1] ~ dcat(pi[1:3])      #all M individuals have probability of being in 1 of 3 states at first occ
-    # y[i,1] ~ dcat(po[z[i,1], i, 1, 1:3])  #covered below
-    
-    for (t in 2:n.occasions){
-      # State process: draw S(t) given S(t-1); daily
-      z[i,t] ~ dcat(ps[z[i,t-1], i, t-1, 1:4])
-    } #t
-    
-    # Observation process: draw O(t) given S(t); n_visit approach via Nathan
-    for (k in 1:visits_i[i]) {  
-      y[i,survey_day[i,k]] ~ dcat(po[z[i,survey_day[i,k]], i, k, 1:3]) 
-    } #k
-  } #i
-  
-  # Define transition and observation matrices
-  for (i in 1:M){
-    for (t in 1:(n.occasions-1)) {
-      # Define probabilities of state S(t+1) given S(t)   
-      ps[1,i,t,1] <- 1-gamma[i,t]              #probability of not entering
-      ps[1,i,t,2] <- gamma[i,t]                #probability of entering as egg
-      ps[1,i,t,3] <- 0                         #can't enter as a chick after day 1
-      ps[1,i,t,4] <- 0                         #probability of entering as terminated
-      ps[2,i,t,1] <- 0                         #probability egg goes to 'not entered'
-      ps[2,i,t,2] <- (1-psiAB[i,t])*phiA[i,t]  #probability of surviving egg state and not transitioning
-      ps[2,i,t,3] <- phiA[i,t]*psiAB[i,t]          #probability of surviving egg state and hatching
-      ps[2,i,t,4] <- 1-phiA[i,t]                   #probability of a failed egg
-      ps[3,i,t,1] <- 0                             #probability chick goes to 'not entered'
-      ps[3,i,t,2] <- 0                             #probability chick goes to egg
-      ps[3,i,t,3] <- phiB[i,t]
-      ps[3,i,t,4] <- 1-phiB[i,t]            #probability of failed chick
-      ps[4,i,t,1] <- 0                      #probability terminated goes to 'not entered'
-      ps[4,i,t,2] <- 0                      #probability terminated goes to egg (maybe happens)
-      ps[4,i,t,3] <- 0                      #probability terminated goes to chick
-      ps[4,i,t,4] <- 1                      #probability terminated goes to terminated
-    } #t
-    
-    for (t in 1:visits_i[i]) { #might need effort 
-      # Define probabilities of O(t) given S(t)
-      po[1,i,t,1] <- 0                        #'not entered' burrow is detected with a burrow visit
-      po[1,i,t,2] <- 0                        #'not entered' burrow is detected with a prey visit
-      po[1,i,t,3] <- 1                        #'not entered' burrow is not detected
-      po[2,i,t,1] <- pA[i,t]                  #egg burrow is detected with a burrow visit
-      po[2,i,t,2] <- 0                        #egg burrow is detected with a prey visit
-      po[2,i,t,3] <- 1-pA[i,t]                #egg burrow is not detected
-      po[3,i,t,1] <- b * pB[i,t]              #chick burrow is detected with a burrow visit 
-      po[3,i,t,2] <- (1 - b) * pB[i,t]        #chick burrow is detected with a prey visit
-      po[3,i,t,3] <- 1 - pB[i,t]              #chick burrow is not detected
-      po[4,i,t,1] <- 0                        #terminated burrow is detected with a burrow visit
-      po[4,i,t,2] <- 0                        #terminated burrow is detected with a prey visit
-      po[4,i,t,3] <- 1                        #terminated burrow is not detected
-    } #t
-  }#M
-  
-  #mean over study period
-  for (i in 1:M) {
-    days.chick[i] <- sum(z[i,] == 3)
-    days.egg[i] <- sum(z[i,] == 2)
-    fledged_high[i] <- step(days.chick[i]-32) #if step() greater than zero, 1
-    fledged_low[i] <- step(days.chick[i]-45) #if step() greater than zero, 1
-    everActive[i] <- max(z[i,]>1) #number of active ever
-  } #i
-  
-  #seasonal values
-  #for (i in 1:M) {
-  for (t in 2:n.occasions) {
-    chick[t] <- sum(z[1:M,t] == 3)
-    egg[t] <- sum(z[1:M,t] == 2)
-  } #t
-  #} #i
-  
-  #means
-  n.fledged.low <- sum(fledged_low[1:M])
-  n.fledged.high <- sum(fledged_high[1:M])
-  n.active.burrow <- sum(everActive[1:M])
-  nest.succ.low <- n.fledged.low/n.active.burrow
-  nest.succ.high <- n.fledged.high/n.active.burrow
-  mean.days.chick <- mean(days.chick)
-  mean.days.egg <- mean(days.egg)
-  Nstar <- sum(everActive[1:M])
-} #mod
-
-write.model(model_MEJS, "model_MEJS.txt")
-model.file = paste(getwd(),"model_MEJS.txt", sep="/")
-
-```
-
-```{r simulation}
+```{r data sim}
 
 ######### Data Simulation
 
@@ -287,7 +156,7 @@ Nstar <- 130     # Superpopulation size (total number of burrows active on at le
 M <- 150 
 n.states <- 4         # not entered, egg, chick, terminated
 n.obs <- 3            # burrow visit, prey delivery, not detected
-phiA <- 0.98          # survival state A (egg)
+phiA <- 0.95          # survival state A (egg)
 phiB <- 0.97          # survival state B (chick)
 psiAB <- 0.05        # transition egg to chick conditional on survival
 pA <- 0.7             # detection for egg 
@@ -430,7 +299,7 @@ z.init[which(!is.na(z.st))] <- NA
 ```
 
 
-```{r model run}
+```{r null run}
    
 # Bundle data
 jags.data <- list(y = CH, n.occasions = n.occasions, 
@@ -445,7 +314,7 @@ inits <- function(){list(#mean.phi = runif(2, 0, 1),
 
 # Parameters monitored
 parameters <- c("mean.p", "b", 
-                'mu.phi.egg', 'mu.phi.ch', 'phiA.int', 'phiB.int', 
+                'mu.phi.egg', 'mu.phi.ch', 'phiA.int', 'phiB.int', 'phiA.tot', 'phiB.tot',
                 'n.active.burrow', 'n.fledged.low', 'n.fledged.high', 
                 'mean.days.chick', 'mean.days.egg', 'mean.gamma',
                 "mean.psiAB",
@@ -454,7 +323,7 @@ parameters <- c("mean.p", "b",
                 "mu.phi")
 
 # MCMC settings
-ni <- 15000; nt <- 1; nb <- 8000; nc <- 4
+# ni <- 15000; nt <- 1; nb <- 8000; nc <- 4
 ni <- 3; nt <- 1; nb <- 1; nc <- 2
 
 out_sim <- jagsUI::jags(jags.data, inits, parameters, model.file = model.file,
@@ -471,8 +340,6 @@ out_sim <- jagsUI::jags(jags.data, inits, parameters, model.file = model.file,
 
 
 ```
-
-
 
 
 ```{r old sim}
